--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "stripe-demos",
   "license": "ISC",
   "dependencies": {
+    "@metronome/sdk": "^0.1.0-alpha.3",
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "stripe": "^16.2.0",
